--- a/travel-versi2/reports/travel_order_template.xml
+++ b/travel-versi2/reports/travel_order_template.xml
@@ -34,7 +34,7 @@
 									<p>
 										Departure : <span t-field="doc.departure"/><br/>
 										Destination : <span t-field="doc.destination"/><br/>
-										Car Type : <span t-field="doc.departure.schedule.vehicle"/>
+										Car Type : <span t-field="doc.schedule_id.vehicle"/>
 									</p>
 								</div>
 								<div class="col-xs-6" style="font-size: 15px !important;" >
