--- a/travel-versi2/static/src/css/style.css
+++ b/travel-versi2/static/src/css/style.css
@@ -91,3 +91,15 @@ p
     font-weight: bold;
     color: #009879;
 }
+
+.checkbox-xl .custom-control-label::before,
+.checkbox-xl .custom-control-label::after {
+  top: 1.2rem;
+  width: 1.85rem;
+  height: 1.85rem;
+}
+
+.checkbox-xl .custom-control-label {
+  padding-top: 23px;
+  padding-left: 10px;
+}
