--- a/travel-versi2/reports/travel_order_template.xml
+++ b/travel-versi2/reports/travel_order_template.xml
@@ -48,7 +48,7 @@
 							<div class="row">
 								<div class="col-xs-12" style="font-size: 15px !important;" >
 									Seat Number : <br/>
-									<span t-foreach="doc.tree_seat_number" t-as="i"><t t-esc="i.seat_list.seat_number"/> : Rp <t t-esc="i.seat_list.price"/>, <br/></span>
+									<span t-foreach="doc.tree_seat_number" t-as="i"><t t-esc="i.seat_list.name"/>, <br/></span>
 								</div>
 							</div>
 							<div class="row">
